--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-NODE_ENV=development
+NODE_ENV=Production
 
-TELEGRAM_T_API_ID=12827185
-TELEGRAM_T_API_HASH=66dadcdc8185c2425a986814b87ea77c
+TELEGRAM_T_API_ID=
+TELEGRAM_T_API_HASH=
 
-BASE_URL=https://web-chat-kohl-five.vercel.app
+BASE_URL=
